adds version & authors

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "videlalvaro/azserverless",
+    "version" "0.0.1-alpha",
     "description": "\"PHP Custom Handler for Azure Functions\"",
     "keywords": ["azure", "functions", "serverless"],
     "type": "library",
@@ -8,6 +9,10 @@
         {
             "name": "Alvaro Videla",
             "email": "videlalvaro@gmail.com"
+        },
+        {
+            "name": "Anthony Chu",
+            "email": "anthony@anthonychu.ca"
         }
     ],
     "minimum-stability": "dev",
